vlib/v/checker/tests/array_fixed_no_free_method_call_err.vv
fn main() {
	mut buffer := [u8(`0`), `0`, `0`, `0`, `-`, `0`, `0`, `-`, `0`, `0`, `T`, `0`, `0`, `:`, `0`,
		`0`, `:`, `0`, `0`, `.`, `0`, `0`, `0`, `Z`]!
	defer {
		unsafe { buffer.free() }
	}
}
